syntax = "proto3";

package wire;

// Handshake represents the first message between peers
message Handshake {
    string subVersion = 1;  // version of the client
}

// GetAddr is used to request for addresses from other peers
message GetAddr {
}

// GetAddrResponse is used to send addresses in response to a GetAddr
message Addr {
    repeated Address addresses = 1;  // list of addresses
}

message Address {
    string address = 1;
    int64 timestamp = 2;
}

// Ping represents a ping message
message Ping {
}

// Pong represents a pong message
message Pong {
}

// Reject is used to inform a node that its message was rejected
message Reject {
    string message = 1;
    int32 code = 2;
    string reason = 3;
    bytes extraData = 4;
}

// Transaction represents a transaction
message Transaction {
    int64 type = 1;
    int64 nonce = 2;
    string to = 3;
    string senderPubKey = 4;
    string value = 5;
    int64 Timestamp = 6;
    string Fee = 7;
    bytes sig = 8;
}

message Block{
    string Version = 1;
    string HashPrevBlock =2;
    repeated string TX=3;
    string HashMerkleRoot =4;
    string Time =5;
    uint64 Nounce =6;
    string Difficulty =7;
    uint64 Number =8;
    string PowHash =9;
    string PowResult =10;
}